Java 8: Remove -XX:MaxPermSize (from docs)